# Mirai

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  script_singularity  setup.cfg
configs/: base_alert_config.json  eval_mirai_full.json  finetune_mirai.json  mirai_base.json  mirai_full.json  validate_mirai.json
demo/: finetune_end2end.sh  finetune_image_aggregator.sh  sample_metadata.csv  validate.sh  validation_output.csv
onconet/datasets/: __init__.py  abstract_mgh_mri_dataset.py  abstract_onco_dataset.py  birds.py  bmcs_mammo_cancer_survival_all_images.py  csv_mammo_cancer.py  detroit_mammo_cancer.py  detroit_mammo_density.py  factory.py  florida_cancer.py  florida_density.py  florida_patch_abnormalities.py  hrl.py  kinetics.py  kth_mammo_cancer_survival.py  kth_mammo_cancer_survival_all_images.py  mgh_mammo_all_paths.py  mgh_mammo_cancer.py  mgh_mammo_cancer_all_views.py  mgh_mammo_cancer_survival.py  mgh_mammo_cancer_survival_all_images.py  mgh_mammo_cancer_with_prior.py  mgh_mammo_density.py  mgh_mammo_patch_risk.py  mgh_mammo_patient_reid.py  mgh_mammo_risk_multi_breast.py  mgh_mammo_risk_multi_view.py  mgh_mri_age.py  mgh_mri_bpe.py  mgh_mri_risk.py  mnist.py  nwh_mammo_cancer.py  nwh_mammo_survival.py  nwh_mammo_survival_all_images.py
onconet/datasets/loader/: image.py
onconet/learn/: state_keeper.py  step.py  train.py  utils.py
onconet/models/: __init__.py  aggregate_feat_maps.py  aggregate_hiddens.py  aggregator.py  cumulative_probability_layer.py  custom_resnet.py  default_models.py  default_resnets.py  discriminator.py  ensemble.py  factory.py  group_norm.py  hiddens_transfomer.py  inflate.py  mirai_full.py  mmd.py  nonlocal_resnets.py  resnet_base.py  temporal_mmd.py
onconet/transformers/: __init__.py  abstract.py  basic.py  factory.py  image.py  tensor.py  video.py
onconet/utils/: c_index.py  generic.py  get_dataset_stats.py  parsing.py  region_annotation.py  risk_factors.py  stats.py
onconet/visualize/: plot_filters.py  viz_utils.py
scripts/: dispatcher.py  get_dataset_stats.py  main.py
tests/: test_loader.py  test_models.py  test_transformers.py  test_utils.py
(+20 files in other folders)
