[metadata]
name = onconet
version = attr: onconet.__version__
author = Adam Yala
author_email = adamyala@mit.edu
description = Sharing Deep Learning Models for Breast Cancer Risk
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/yala/Mirai
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3
install_requires =
    gitpython==3.1.26
    imageio==2.13.1
    lifelines==0.24.15
    mock==4.0.3
    numpy==1.22.1
    Pillow==9.0.0
    scikit-image==0.18.2
    scikit-learn==0.23.2
    scipy==1.7.3
    torch==1.9.0
    torchvision==0.10.0
    tqdm==4.62.3
