[metadata]
name = onconet
version = attr: onconet.__version__
author = Adam Yala
author_email = adamyala@mit.edu
description = Sharing Deep Learning Models for Breast Cancer Risk
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/yala/Mirai
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3
install_requires =
    imageio==2.28.0
    lifelines==0.27.4
    numpy==1.24.3
    scikit-image==0.20.0
    scikit-learn==1.2.2
    scipy==1.10.1
    torch==2.0.0
    torchvision==0.15.1
    tqdm==4.65.0
