[metadata]
name = onconet
version = attr: onconet.__version__
author = Adam Yala
author_email = yala@berkeley.edu
description = Sharing Deep Learning Models for Breast Cancer Risk
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/yala/Mirai
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3
install_requires =
    torch==2.3.1
    torchvision
    sklearn
    scipy
    numpy
    Pillow
    tqdm
    mock
    scikit-image
    imageio
    gitpython
    lifelines
